<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_below="@+id/logo"
        android:background="@color/text_color"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:paddingLeft="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            android:onClick="BackClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.example.fazal.capalino.CustomViews.CustomTextView
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:text="@string/updateprofile"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:paddingBottom="12dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"  >

            <LinearLayout

                android:orientation="vertical"
                android:id="@+id/registerdialog"
                android:background="@drawable/round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.fazal.capalino.CustomViews.CustomTextView_Book
                    android:layout_marginTop="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="4dp"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <com.example.fazal.capalino.CustomViews.CustomEditText_Book
                    android:padding="8dp"
                    android:id="@+id/name"
                    android:textColor="@color/editext_color"
                    android:singleLine="true"
                    style="@style/App_EditTextStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <com.example.fazal.capalino.CustomViews.CustomTextView_Book
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="17sp"
                    android:paddingBottom="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname"/>

                <com.example.fazal.capalino.CustomViews.CustomEditText_Book
                    android:padding="8dp"
                    android:id="@+id/lastname"
                    android:singleLine="true"
                    android:textColor="@color/editext_color"
                    style="@style/App_EditTextStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <com.example.fazal.capalino.CustomViews.CustomTextView_Book
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="4dp"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>

                <com.example.fazal.capalino.CustomViews.CustomEditText_Book
                    android:padding="8dp"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    style="@style/App_EditTextStyle"
                    android:textColor="@color/editext_color"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <com.example.fazal.capalino.CustomViews.CustomTextView_Book
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="4dp"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phno"/>

                <com.example.fazal.capalino.CustomViews.CustomEditText_Book
                    android:padding="8dp"
                    android:singleLine="true"
                    android:inputType="number"
                    android:id="@+id/phno"
                    android:layout_marginLeft="20dp"
                    style="@style/App_EditTextStyle"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/editext_color"
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <com.example.fazal.capalino.CustomViews.CustomTextView_Book
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="4dp"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"/>

                <com.example.fazal.capalino.CustomViews.CustomEditText_Book
                    android:padding="8dp"
                    android:id="@+id/address"
                    android:singleLine="true"
                    style="@style/App_EditTextStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/editext_color"
                    android:inputType="textPostalAddress"
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <com.example.fazal.capalino.CustomViews.CustomTextView_Book
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="4dp"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"/>

                <com.example.fazal.capalino.CustomViews.CustomEditText_Book
                    android:padding="8dp"
                    android:singleLine="true"
                    android:id="@+id/city"
                    android:inputType="text"
                    android:layout_marginLeft="20dp"
                    style="@style/App_EditTextStyle"
                    android:textColor="@color/editext_color"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <com.example.fazal.capalino.CustomViews.CustomTextView_Book
                    android:paddingTop="4dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="4dp"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state"/>

                <com.example.fazal.capalino.CustomViews.CustomEditText_Book
                    android:padding="8dp"
                    android:singleLine="true"
                    android:id="@+id/state"
                    android:inputType="text"
                    android:layout_marginLeft="20dp"
                    style="@style/App_EditTextStyle"
                    android:textColor="@color/editext_color"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />




                <LinearLayout
                    android:padding="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.example.fazal.capalino.CustomViews.CustomButton
                        android:textColor="@color/white"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/update"
                        android:text="Update Profile"
                        android:onClick="UpdateClick"
                        android:background="@drawable/button_round"
                        android:layout_width="160dp"
                        android:layout_height="45dp" />


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_gravity="bottom"
        android:weightSum="5"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@drawable/bar4"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <ImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="HomeClick"
            android:src="@drawable/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <ImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/browse"
            android:onClick="BrowseClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <ImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="TrackClick"
            android:src="@drawable/track"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/setting"
            android:onClick="SettingsClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <ImageView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/resources"
            android:onClick="ResourceClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />



    </LinearLayout>

</RelativeLayout>